--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.28)
-project(hex_patch C)
+project(hexpatch C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_library(hex_patch STATIC hex_patch.c)
+add_library(hexpatch STATIC hexpatch.c)
 
 add_executable(tests test.c)
 
-target_link_libraries(tests hex_patch)
+target_link_libraries(tests hexpatch)
 
 enable_testing()
 add_test(NAME tests COMMAND time tests)
